k8s/product/backend/spring-gateway/spring-gateway-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: spring-gateway
  namespace: prod
spec:
  replicas: 1
  selector:
    matchLabels:
      app: spring-gateway
  template:
    metadata:
      labels:
        app: spring-gateway
    spec:
      containers:
      - name: gateway
        image: dodo133/prod_gateway_backend_spring_service:test-ae1f88990c59
        ports:
        - containerPort: 8080
