k8s/product/backend/spring-gateway/spring-gateway-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: spring-gateway-service
  namespace: prod
spec:
  selector:
    app: spring-gateway
  ports:
    - protocol: TCP
      port: 8080
